Finalizando a função para atualizar a tela do RF006 automaticamente

--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -57,7 +57,6 @@
                     <h2>Serviço em <span class="destaque-txt">Aberto</span></h2>
                     <hr>
                 </div>
-                <!-- Serviço á ser feito -->
                 <div class="ladoEsquerdo-conteudo" id="encaminhamentos_fazendo">
                     <!-- {% for x in campo_encaminhamentos_fazendo %}
                     <div class="ladoEsquerdo-card">
@@ -75,6 +74,9 @@
             <div class="container-servico-encaminhado_subtitulo">
                 <h2>Serviços Encaminhados</h2>
                 <hr>
+            </div>
+            <section class="container-servico-encaminhado">
+                
                 <div class="container-encaminhamento" id="encaminhamentos_pendentes">
                     <!-- {% for x in campo_encaminhamentos_pendentes %}
                     <a href="/RF006A/{{x[3]}}/{{x[4]}}">
@@ -91,6 +93,7 @@
                         </div>
                     </a>
                     {%endfor%} -->
+                </div>
             <section>
                 <button onclick="redirectSolicitacao()" class="Btn" >
                   
