--- a/static/CSS/RF006A-aceitaSolic.css
+++ b/static/CSS/RF006A-aceitaSolic.css
@@ -52,8 +52,8 @@ nav{
     bottom: 0;
     left: 0;
 
-    border-top-left-radius: 10rem;  
-    border-top-right-radius: 10rem; 
+    border-top-left-radius: 2rem;  
+    border-top-right-radius: 2rem; 
     padding: 1.5rem;
 
     display: flex;
@@ -61,9 +61,17 @@ nav{
     align-content: center;
     justify-content: space-evenly;
     box-shadow:  4px 1px 30px  black;
+    padding-bottom: 3rem;
 }
 
-
+.detalhes-solicitacao__urgencia{
+    margin: 0 auto;
+    padding: 0.5rem 1rem;  
+    width: 40rem;
+    border: 0.2rem solid var(--colorRed);    
+    border-radius: 3rem;
+    
+}
 .detalhes-solicitacao__cabecalho {
     text-align: center;
 }
