--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -8,7 +8,7 @@ nav {
 
 /* Estilo para a imagem dentro da nav */
 .nav-img img {
-    max-width: 150px; 
+    max-width: 20rem; 
     width: 100%; 
     height: auto; 
 }
@@ -32,6 +32,7 @@ nav {
     align-content: center;
     flex-wrap: nowrap;
     justify-content: space-evenly;
+    box-shadow: -2px -1px 10px rgba(0, 0, 0, 0.5);
 }
 
 /* Texto centralizado dentro do container */
