--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -43,6 +43,7 @@
     <main>
         <!-- Área Inferior do site -->
         <section class="sectionBaixo">
+            <p  class="espacoP">Pesquisar por Tipo de Serviço:</p>
             <!-- Barra de Pesquisa -->
             <div class="sectionBaixo__search-container">
                 <!-- Campo de pesquisa com espaço para inserir texto -->
@@ -50,7 +51,7 @@
                 <!-- Botão de pesquisa -->
                 <button type="submit" class="sectionBaixo__search-button" aria-label="Pesquisar">Pesquisar</button>
             </div>
-
+            <p class="espacoP">Filtrar por Bloco</p>
             <!-- Filtro -->
             <aside class="sectionBaixo__filter-container">
                 <!-- Selecionar filtro com descrição para leitores de tela -->
