Colocando link no btn solicitar e mudando nome dele na tela do solicitante

--- a/templates/TLsolicitante.html
+++ b/templates/TLsolicitante.html
@@ -66,14 +66,14 @@
                 </div>
             </section>
             <section>
-                <button class="Btn">
+                <button class="Btn" onclick="redirectSolicitacao()">
                   
                   <div class="sign">
                     <span class="material-symbols-outlined">
                         add
                         </span>
                 
-                  <div class="text">Chamado</div>
+                  <div class="text">Solicitar</div>
                 </button>                                                  
             </section>
         </main>
