Termino tela cadastro

--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -57,13 +57,13 @@
                 <!-- Campo de entrada para o e-mail -->
                 <div class="form-container__input">
                     <label for="email" class="form-container__label">E-mail:</label>
-                    <input type="email" id="email" name="email" class="form-container__input-text" placeholder="exemplo@exemplo.com" required>
+                    <input type="email" id="email" name="email" class="form-container__input-text email" placeholder="exemplo@exemplo.com" required>
                 </div>
 
                 <!-- Campo de entrada para a senha -->
                 <div class="form-container__input">
                     <label for="senha" class="form-container__label">Senha:</label>
-                    <input type="password" id="senha" name="senha" class="form-container__input-text" placeholder="Pelo menos 6 caracteres" required>
+                    <input type="password" id="senha" name="senha" class="form-container__input-text senha" placeholder="Pelo menos 6 caracteres" required>
                 </div>
 
                 <!-- Campo de upload de foto -->
