--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -61,10 +61,19 @@
                 </div>
 
                 <!-- Campo de entrada para a senha -->
+                <!-- Campo de entrada para a senha -->
                 <div class="form-container__input">
                     <label for="senha" class="form-container__label">Senha:</label>
                     <input type="password" id="senha" name="senha" class="form-container__input-text senha" placeholder="Pelo menos 6 caracteres" required>
+                    <div id="senha-requisitos" class="senha-requisitos hidden">
+                        <p id="requisito1" class="requisito">Mínimo de 6 caracteres</p>
+                        <p id="requisito2" class="requisito">Uma letra</p>
+                        <p id="requisito3" class="requisito">Um número</p>
+                        <p id="requisito4" class="requisito">Um caractere especial</p>
+                        <p id="mensagem" class="mensagem hidden">Senha validada</p>
+                    </div>
                 </div>
+
 
                 <!-- Campo de upload de foto -->
                 <div class="form-container__input">
