--- a/static/CSS/RF005-encamSolic.css
+++ b/static/CSS/RF005-encamSolic.css
@@ -150,19 +150,20 @@ main{
 
 .form_btn-emergencia{
     width: 100vw;
-    height: 25vh;
+    height: 33vh;
     position: fixed;
     bottom: 0;
     z-index: 1;
     background-color: var(--color06);
-    border-top-left-radius: 4rem;
-    border-top-right-radius: 4rem;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
     color: var(--color01);
+    align-content: center;
   
 }
 
 .form_btn-emergencia__titulo{
-  margin: 2rem 0rem 0rem 3rem;
+  margin-left: 2rem;
   font-size: 1.5rem;
 }
 
@@ -176,10 +177,11 @@ main{
 }
 
 .opcaoUrgencia{
-    padding: 1rem;
+    padding: 1.4rem;
     border: solid 2px var(--color01);
     border-radius: 1rem;
     transition-duration: 0.2s;
+    font-size: 1.1rem;
 }
 
 .opcaoUrgencia.selected{
@@ -197,14 +199,14 @@ main{
   background-color: var(--color03);
   color: var(--color01);
   width: 20rem;
-  padding: 1rem;
+  padding: 1.5rem;
   text-align: center;
   border: none;
   border-radius: 50px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bold;
   cursor: pointer;
-  margin: 1.5rem 10rem 0rem 10rem;
+  margin-top: 1.5rem;
   transition-duration: 0.2s;
 }
 
