--- a/static/CSS/RF004-ADMrecbSolic.css
+++ b/static/CSS/RF004-ADMrecbSolic.css
@@ -67,7 +67,9 @@
 }
 
 .header__user-image {
-    height: 8rem; 
+    width: 6rem;
+    height: 6rem;
+    object-fit: cover;
     border-radius: 100%; 
     margin-right: 1.5rem; 
 }
