--- a/static/CSS/RF006 - TLcolaborador.css
+++ b/static/CSS/RF006 - TLcolaborador.css
@@ -53,8 +53,9 @@ header{
 }
 
 .container-header-user img{
-    width: auto;
-    height: 5rem;
+    width: 6rem;
+    height: 6rem;
+    object-fit:cover;
     border-radius: 100%;
 }
 
