--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -29,7 +29,7 @@
         <!-- Informações do usuário logado -->
         <section class="header__user-info">
             <!-- Imagem de perfil do usuário com descrição acessível -->
-            <img src="/static/IMG/image 17exImgRogerio.png" alt="Imagem de Perfil de Claudio Silva" class="header__user-image">
+            <img src="{{campo_foto}}" alt="Imagem de Perfil de Claudio Silva" class="header__user-image">
             <div class="header__user-details">
                 <!-- Nome do usuário -->
                 <h2 class="header__user-name">{{campo_nome}}</h2>
