--- a/templates/RF006A-aceitaSolic.html
+++ b/templates/RF006A-aceitaSolic.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/RF006A-aceitaSolic.css">
     <!-- Link Arquivo JS -->
-    <script defer src="/static/JS/RF006-TLmanuten.js"></script>
+    <script defer src="/static/JS/RF006A - aceitaSolic.js"></script>
     <!-- Biblioteca jQuery para manipulação de DOM e requisições Ajax -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- Biblioteca Font Awesome para uso de ícones na página -->
