--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -30,7 +30,7 @@
         </nav>
         <main>
             <section class="container-main">
-                    <div value="form_select-user" id="form_select-user" name="form_select-user">
+                    <div class="form_select-user" value="form_select-user" id="form_select-user" name="form_select-user">
 
                     </div>
                     
