--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -21,7 +21,7 @@
          <!-- Link para o Ajax -->
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
          <!-- link JS biblioteca SweetAlert -->
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     </head>
     <body>
