Criando condição para aparecer foto de perfil padrão

--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -29,7 +29,7 @@
         <!-- Informações do usuário logado -->
         <section class="header__user-info">
             <!-- Imagem de perfil do usuário com descrição acessível -->
-            <img src="{{campo_foto}}" alt="Imagem de Perfil de Claudio Silva" class="header__user-image">
+            <img src="{{ campo_foto if campo_foto else 'https://st4.depositphotos.com/11574170/25191/v/450/depositphotos_251916955-stock-illustration-user-glyph-color-icon.jpg' }}" alt="Foto de Perfil" class="header__user-image">
             <div class="header__user-details">
                 <!-- Nome do usuário -->
                 <h2 class="header__user-name">{{campo_nome}}</h2>
