--- a/templates/RF010-historicoRelatorio.html
+++ b/templates/RF010-historicoRelatorio.html
@@ -32,7 +32,7 @@
         <!-- Cartão de histórico de serviço -->
         <div class="conteudo__card">
             <!-- Imagem do profissional responsável pelo serviço -->
-            <img src="heitor.jpg" alt="Foto de Heitor Lima" class="conteudo__imagem">
+            <img src="{{ campo_foto if campo_foto else 'https://st4.depositphotos.com/11574170/25191/v/450/depositphotos_251916955-stock-illustration-user-glyph-color-icon.jpg' }}" alt="Foto de Perfil" class="conteudo__imagem">
             
             <!-- Informações sobre o serviço realizado -->
             <div class="conteudo__informacao">
