--- a/static/CSS/RF003-solic.css
+++ b/static/CSS/RF003-solic.css
@@ -3,11 +3,14 @@
 input,select{
     font-family: "Montserrat", sans-serif;
 }
-
+body{
+    width: 100vw;
+    height: 100vh;
+}
 /* Estilo da Área do bnt-voltar e Data */
 .container-header{
-    width: 100vw;
-    height: 5vh;
+    width: 100%;
+    height: 5%;
     display: flex;
     justify-content: space-between;
     padding-top: 1.5rem;
