--- a/templates/RF008-fimchamado.html
+++ b/templates/RF008-fimchamado.html
@@ -54,28 +54,32 @@
                 <option value="outros">Outros</option>
             </select>
         </div>
-
-        <!-- Galeria de chamados -->
-        <div class="galeria">
-            <article class="galeria__item">
-                <!-- Seção superior do item da galeria com imagem de perfil e informações do chamado -->
-                <div class="galeria__topo">
-                    <img class="galeria__imagem-perfil" src="https://miro.medium.com/v2/resize:fit:1200/1*g09N-jl7JtVjVZGcd-vL2g.jpeg" alt="Foto de perfil do responsável pelo chamado" width="100">
-                    <div class="galeria__info">
-                        <div class="galeria__status" aria-label="Status do chamado"><p>STATUS</p></div>
-                        <div class="galeria__tipo" aria-label="Tipo de chamado"><p>TIPO</p></div>
-                        <div class="galeria__localizacao" aria-label="Localização do chamado"><p>Aonde está</p></div>
+       <!-- Galeria de chamados -->
+       <div class="galeria">
+        {% if encaminhamento %}
+            {% for item in encaminhamento %}
+                <article class="galeria__item">
+                    <div class="galeria__topo">
+                        <img class="galeria__imagem-perfil" src="https://miro.medium.com/v2/resize:fit:1200/1*g09N-jl7JtVjVZGcd-vL2g.jpeg" alt="Foto de perfil do responsável pelo chamado" width="100">
+                        <div class="galeria__info">
+                            <div class="galeria__status" aria-label="Status do chamado"><p>{{ item['status'] }}</p></div>
+                            <div class="galeria__tipo" aria-label="Tipo de chamado"><p>{{ item['servico'] }}</p></div>
+                            <div class="galeria__localizacao" aria-label="Localização do chamado"><p>{{ item['id_sala'] }}</p></div>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Descrição do chamado -->
-                <div class="galeria__descricao" aria-label="Descrição do chamado"><p>Descrição do chamado</p></div>
-                
-                <!-- Botões para encerrar o chamado e ver mais detalhes -->
-                <button class="galeria__botao-encerrar" aria-label="Botão para encerrar o chamado"><p>Encerrar chamado</p></button>
-                <button class="galeria__botao-Mais" aria-label="Botão para ver mais detalhes do chamado"><p>Mais</p></button>
-            </article>  
-        </div>
+                    <div class="galeria__descricao" aria-label="Descrição do chamado"><p>{{ item['adendo'] }}</p></div>
+                    
+                    <button class="galeria__botao-encerrar" aria-label="Botão para encerrar o chamado"><p>Encerrar chamado</p></button>
+                    <button class="galeria__botao-Mais" aria-label="Botão para ver mais detalhes do chamado"><p>Mais</p></button>
+                </article>
+            {% endfor %}
+        {% else %}
+            <p>Nenhum chamado encontrado.</p>
+        {% endif %}
+    </div>
+
+        
     </main>
 </body>
 </html>
