Retornando o status final da tela da finalização

--- a/templates/RF008-fimchamado.html
+++ b/templates/RF008-fimchamado.html
@@ -62,7 +62,7 @@
                     <div class="galeria__topo">
                         <img class="galeria__imagem-perfil" src="https://miro.medium.com/v2/resize:fit:1200/1*g09N-jl7JtVjVZGcd-vL2g.jpeg" alt="Foto de perfil do responsável pelo chamado" width="100">
                         <div class="galeria__info">
-                            <div class="galeria__status" aria-label="Status do chamado"><p>{{ item['status'] }}</p></div>
+                            <div class="galeria__status" aria-label="Status do chamado"><p>{{ item['status_final'] }}</p></div>
                             <div class="galeria__tipo" aria-label="Tipo de chamado"><p>{{ item['servico'] }}</p></div>
                             <div class="galeria__localizacao" aria-label="Localização do chamado"><p>{{ item['id_sala'] }}</p></div>
                         </div>
