--- a/templates/TLadministrador.html
+++ b/templates/TLadministrador.html
@@ -46,7 +46,7 @@
                     <ul class="menu">
                         <li><a href="/RF004"><img src="/static/IMG/12.png" alt="Solicitações"> Solicitações</a></li>
                         <li><a href="#servicos"> <img src="/static/IMG/13.png" alt="Relatórios"> Relatórios</a></li>
-                        <li><a href="#contato"> <img src="/static/IMG/15.png" alt="Finalização"> Finalização</a></li>
+                        <li><a href="/RF008"> <img src="/static/IMG/15.png" alt="Finalização"> Finalização</a></li>
                     </ul>
                     
                     <button class="button button--logout" onclick="logout()">
