--- a/static/CSS/RF003-solic.css
+++ b/static/CSS/RF003-solic.css
@@ -3,3 +3,198 @@
 input,select{
     font-family: "Montserrat", sans-serif;
 }
+
+/* Estilo do cabeçalho (btn voltar e informações do User) */
+.container-header{
+    width: 100vw;
+    height: 20vh;
+}
+
+.container-header_btn-voltar{
+    margin: 1rem;
+    padding: 0.5rem;
+    width: 10rem;
+    border-color: var(--color02);
+    border-radius: 5rem;
+    background: none;
+    font-weight: 700;
+    transition-duration: 0.2s;
+}
+
+.container-header_btn-voltar i{
+    margin-right: 0.5rem;
+}
+
+ /* Mudança de Cor do botão ao passar o cursor por cima */
+.container-header_btn-voltar:hover{
+    border-color: none;
+    background-color: var(--color02);
+    color: var(--color01);
+}
+
+/* Estilo da Área de Solicitação */
+.container-main{
+    width: 100vw;
+    height: 80vh;
+    background-color: var(--color06);
+    color: var(--color01);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    box-shadow: 0 -4px 8px rgba(20, 23, 53, 0.3); 
+
+}
+
+.main-titulo-subtitulo{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.subtitulo{
+   font-weight: 100;
+   font-size:1.5rem;
+}
+
+.container-main h1 p{
+    
+    margin-left: 1rem;
+    font-weight: 700;
+}
+
+.container-main h1{
+    
+    margin: 1.5rem;
+    font-size: 3rem;
+    font-weight: 100;
+    display: flex;
+    justify-content: center;
+}
+
+
+/* Estilo do Formulario de envio de Solicitação */
+.container-main_form{
+    text-align: center;
+
+}
+
+/* Estilo dos Input Select*/
+.form_select{
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem;
+    gap: 2.5rem;
+}
+
+.form_select select{
+    background-color: var(--color04);
+    color: var(--color06);
+    font-weight: 700;
+    border: none;
+    padding: 0.7rem;
+    border-radius: 2rem;
+}
+
+/* Estilo input Arquivo */
+.form_input-arquivo{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-bottom: 2rem;
+}
+
+.form_input-arquivo label{
+    font-size: 1.5rem;
+}
+
+.form_input-arquivo input{
+    background-color: var(--color04);
+    padding: 0.5rem;
+    color: var(--color06);
+    border-radius: 2rem;
+    margin-top: 1rem;
+
+}
+
+#arquivo{
+    background-color: var(--color01);
+    border: none;
+}
+
+.form_descricao{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin:  0.5rem;
+    color: var(--color04);
+}
+
+.form_descricao label{
+    font-size: 1.5rem;
+}
+
+#descricao{
+    width: 100%;
+    height: 8rem;
+    border-radius: 2rem;  
+    margin-top: 1rem;
+    padding: 1rem;
+    resize: none; /* Impede redimensionamento */
+}
+
+#descricao::-webkit-scrollbar {
+    display: none; /* Oculta a barra de rolagem */
+}
+
+/* Estilo do Botão "Enviar Solicitação" */
+.form_btn-enviar{
+    display: inline-block;
+    width: 20rem;
+    padding: 1.2rem;
+    text-align: center;
+    border-radius: 50px;
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out; 
+    cursor: pointer;
+    background-color: var(--color03); 
+    border: 2px solid var(--color03); 
+    color: var(--color01); 
+    margin: 0.5rem 0rem 1rem 0rem;
+}
+
+.form_btn-enviar:hover{
+    background-color: transparent; 
+    color: var(--color03);
+    box-shadow: 0px 8px 15px rgba(224, 223, 163, 0.2); 
+    transform: scale(1.02); 
+    border: 2px solid var(--color03);
+}
+/* ------------RESPONSIVIDADE------------------- */
+@media (max-width:376px) {
+    .container-main {
+        height: 100vh;
+    }
+    .container-main h1 {
+        font-size: 2.5rem;
+    }
+}
+
+@media(max-width:400px){
+   
+    .form_btn-enviar{
+        margin: 3rem 0rem 1rem 0rem;
+        
+    }
+}
+
+@media(min-width:1000px){
+    main{
+        overflow: hidden;
+    }
+    .container-main h1 {
+        font-size: 3rem;
+    }
+}
