--- a/templates/RF004A-detlSolic.html
+++ b/templates/RF004A-detlSolic.html
@@ -45,8 +45,14 @@
                 <p class="detalhes-solicitacao__texto-descricao">
                     {{campo_descricao}}
                 </p>
-                <!-- Botão para encaminhar a solicitação, redirecionando para outra página -->
+                <img src="https://t4.ftcdn.net/jpg/08/34/54/63/240_F_834546357_SoRzcgHyHPb9OLlsJ1fyRxtE4WgNAsWR.jpg" alt="Imagem que ilustra a solicitação">
+                <div class="container-botao">
+                    <!-- Botão para encaminhar a solicitação, redirecionando para outra página -->
                 <a href="/RF005/{{campo_id_solicitacao}}"><button class="botao botao-cadastro">Encaminhar</button></a>
+                <!-- Botão para excluir esta solicitação-->
+                <a href=""><button class="botao botao-excluir">Excluir</button></a>
+                </div>
+                
             </div>
         </section>
     </main>
