--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -58,7 +58,7 @@
                     </div>
                     <!-- Campo de texto para informações adicionais -->
                     <div class="form_descricao">
-                        <label for="descricao">Descricao:</label>
+                        <label for="descricao">Descrição:</label>
                         <textarea name="descricao" id="descricao" placeholder="Descreva o serviço a ser realizado..."></textarea>
                         <!-- <input type="text" id="descricao" name="descricao" placeholder="Descreva o serviço a ser realizado..."> -->
                     </div>
