Colocando o link de icone na pagina RF007

--- a/templates/RF007-manutConfirm.html
+++ b/templates/RF007-manutConfirm.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/static/CSS/RF007-manutConfirm.css">
     <!-- Scripts JavaScript: Carregamento dos arquivos de script da página -->
     <script defer src="/static/JS/funcao-voltar.js"></script>
+    <!-- Biblioteca de ícones Font Awesome -->
+    <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
     <!-- link JS biblioteca SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
