--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -39,25 +39,25 @@
                 <!-- Campo de entrada para o nome completo -->
                 <div class="form-container__input">
                     <label for="nome" class="form-container__label">Nome completo:</label>
-                    <input type="text" id="nome" name="nome" class="form-container__input-text" placeholder="Pedro Nascimento" required>
+                    <input autocomplete="off" type="text" id="nome" name="nome" class="form-container__input-text" placeholder="Pedro Nascimento" required>
                 </div>
 
                 <!-- Campo de entrada para o CPF -->
                 <div class="form-container__input">
                     <label for="cpf" class="form-container__label">CPF:</label>
-                    <input type="text" id="cpf" name="cpf" class="form-container__input-text" placeholder="000.000.000-00" maxlength="14" required>
+                    <input autocomplete="off" type="text" id="cpf" name="cpf" class="form-container__input-text" placeholder="000.000.000-00" maxlength="14" required>
                 </div>
 
                 <!-- Campo de entrada para o SN -->
                 <div class="form-container__input">
                     <label for="sn" class="form-container__label">SN:</label>
-                    <input type="text" id="sn" name="sn" class="form-container__input-text" placeholder="SN0000000" required>
+                    <input autocomplete="off" type="text" id="sn" name="sn" class="form-container__input-text" placeholder="SN0000000" required>
                 </div>
 
                 <!-- Campo de entrada para o e-mail -->
                 <div class="form-container__input">
                     <label for="email" class="form-container__label">E-mail:</label>
-                    <input type="email" id="email" name="email" class="form-container__input-text email" placeholder="exemplo@exemplo.com" required>
+                    <input autocomplete="off" type="email" id="email" name="email" class="form-container__input-text email" placeholder="exemplo@exemplo.com" required>
                 </div>
 
                 <!-- Campo de entrada para a senha -->
