--- a/static/CSS/RF004-ADMrecbSolic.css
+++ b/static/CSS/RF004-ADMrecbSolic.css
@@ -173,6 +173,12 @@
     padding: 1rem; 
 }
 
+.sectionBaixo__grid-section h3{
+    text-align: center;
+    color: white;
+    grid-column: span 3;
+}
+
 /* Estilo para os itens do grid */
 .sectionBaixo__grid-item {
     padding: 1rem; 
