--- a/static/CSS/RF006-TLmanuten.css
+++ b/static/CSS/RF006-TLmanuten.css
@@ -35,8 +35,10 @@ header{
 .data{
     display: flex;
     gap: 0.5rem;
-    margin-right: 3rem;
     font-size: 1.8rem;
+}
+.container-header-user_info {
+  margin-left: 1rem;
 }
 .dia-semana{
     color: var(--color05);
@@ -58,7 +60,9 @@ header{
     object-fit: cover;  
     border-radius: 100%;
 }
-
+.container-header-user_info{
+  margin-left: 1rem;
+}
 .container-header-user_nome{
     font-size: 2rem;
     color: var(--color06);
@@ -69,7 +73,7 @@ header{
     color: var(--color01);
     text-align: center;
     padding: 0.4rem;
-    border-radius: 5rem;
+    border-radius: 0.5rem;
     font-size: 1.2rem;
 }
 
